test/JDBC/expected/single_db/db_accessadmin-vu-verify.out


-- tsql
-- CREATE LOGIN AND ADD IT TO db_accessadmin
    -- Only members of db_owner should be able to add/drop members to db_accessadmin
-- db_accessadmin should be able to do the following
    -- CREATE USER in database
    -- DROP ANY USER in database (except dbo)
    -- ALTER default_schema for any user in database
    -- RENAME user execpt for members of db_owner
    -- CREATE SCHEMA for self or other users in database
-- CREATE A USER WITH db_accessadmin privilege in DATABASE babel_5136
USE master
GO
CREATE LOGIN babel_5136_db_accessadmin_l1 WITH PASSWORD = '12345678'
GO
CREATE USER babel_5136_user_master FOR LOGIN babel_5136_db_accessadmin_l1
GO
USE babel_5136
GO
CREATE USER babel_5136_db_accessadmin_user FOR LOGIN babel_5136_db_accessadmin_l1
GO
ALTER ROLE db_accessadmin ADD MEMBER babel_5136_db_accessadmin_user
GO
-- MEMBERS OF db_accessadmin WILL ALWAYS HAVE CONNECT PRIVILEGES
REVOKE CONNECT FROM babel_5136_db_accessadmin_user
GO
-- terminate-tsql-conn

-- tsql user=babel_5136_l1 password=12345678 database=babel_5136
-- Only db_owner members should be able to do this
ALTER ROLE db_accessadmin ADD MEMBER babel_5136_db_accessadmin_user
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: Cannot alter the role 'db_accessadmin', because it does not exist or you do not have permission.)~~

-- terminate-tsql-conn


-- tsql user=babel_5136_db_accessadmin_l1 password=12345678
-- Check all allowed operations
USE master
GO

SELECT current_user
GO
~~START~~
varchar
babel_5136_user_master
~~END~~


-- should not be a member of db_accessadmin in master database
SELECT IS_ROLEMEMBER('db_accessadmin')
GO
~~START~~
int
0
~~END~~


USE babel_5136
GO

SELECT current_user
GO
~~START~~
varchar
babel_5136_db_accessadmin_user
~~END~~


-- should be a member of db_accessadmin in babel_5136 database
SELECT IS_ROLEMEMBER('db_accessadmin')
GO
~~START~~
int
1
~~END~~


-- db_accessadmin can not add/drop members to db_accessadmin
ALTER ROLE db_accessadmin ADD MEMBER babel_5136_u1
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: Cannot alter the role 'db_accessadmin', because it does not exist or you do not have permission.)~~


-- CREATE DROP A NEW USER
CREATE USER babel_5136_u2 FOR LOGIN babel_5136_l2
GO
DROP USER babel_5136_u2
GO

-- DROP & RECREATE EXISTING USER
DROP USER babel_5136_u1
GO
CREATE USER babel_5136_u1 FOR LOGIN babel_5136_l1
GO

-- ALTER USER and THEN DROP IT
ALTER USER babel_5136_u1 WITH DEFAULT_SCHEMA = dbo
GO
-- NOT SUPPORTED CURRENTLY IN BABELFISH
ALTER USER babel_5136_u1 WITH DEFAULT_LANGUAGE = English
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error at or near "DEFAULT_LANGUAGE")~~

ALTER USER babel_5136_u1 WITH NAME = babel_5136_u1_new_name
GO
-- NOT SUPPORTED CURRENTLY IN BABELFISH
ALTER USER babel_5136_u1_new_name WITH PASSWORD = 'shouldfail'
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near '<EOF>' at line 3 and character position 0)~~

-- db_accessadmin should not be able to ALTER LOGIN MAPPING
ALTER USER babel_5136_u1_new_name WITH LOGIN = babel_5136_l3
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: Current user does not have privileges to change login)~~

ALTER USER babel_5136_u1_new_name WITH NAME = babel_5136_u1
GO

-- CREATE SCHEMA should be allowed db_accessadmin
CREATE SCHEMA s1
GO
CREATE SCHEMA s2 AUTHORIZATION dbo
GO
CREATE SCHEMA s3 AUTHORIZATION babel_5136_u1
GO
-- Should only be able to drop schema that it owns
DROP SCHEMA s1
GO
DROP SCHEMA s2
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: must be owner of schema s2)~~

DROP SCHEMA s3
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: must be owner of schema s3)~~


-- Should be restricted
DROP USER dbo
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: Cannot drop the user 'dbo'.)~~

-- terminate-tsql-conn user=babel_5136_db_accessadmin_l1 password=12345678

